[package]
name = "bustools"
version = "0.11.0"
edition = "2021"
license = " GPL-3.0-or-later"
description = "Interacting with the kallisto/bus format of scRNAseq data"
homepage = "https://github.com/redst4r/rustbustools"
repository = "https://github.com/redst4r/rustbustools"
keywords = ["scrnaseq", "kallisto", "bus", "single-cell", "rnaseq"]
categories = ["science"]
readme = "README.md"
include = ["/src", "README.md"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
bincode = "1.2.1"
indicatif = "0.17"
statrs = "0.16"
rand = "0.8"
probability="0.20"  # for faster Binomial Sampling, using inverse pdf
itertools="0.12"
tempfile="3.7.0"
bitvec="1"
newpfd= { version="0.7.0" }
fastfibonacci= { version="0.3.0" }
hashbrown="0.14"
ahash="0.8"
# crossbeam = "0.8"
# flume = "0.10"

[dev-dependencies]
criterion = "0.5"
ndarray="0.15.6"
pretty_assertions = "1"

[[bench]]
name = "my_benchmark"
harness = false
path = "benches/my_benchmark.rs"
