[package]
name = "bustools"
version = "0.14.1"
edition = "2021"
license = " GPL-3.0-or-later"
description = "Interacting with the kallisto/bus format of scRNAseq data"
homepage = "https://github.com/redst4r/rustbustools"
repository = "https://github.com/redst4r/rustbustools"
keywords = ["scrnaseq", "kallisto", "bus", "single-cell", "rnaseq"]
categories = ["science"]
readme = "README.md"
include = ["/src", "README.md"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
# bincode = { version = "2.0.0-rc.3", features = ["serde"]  }
bincode = "1.3.3"
indicatif = "0.17"
itertools="0.13"
tempfile="3.10"
rkyv= {version = "0.7.43", features =["validation"] }
bitvec="1"
newpfd= { version="0.8.0" }
#newpfd= { path= "/home/michi/Dropbox/newpfd-rs" }

fastfibonacci= { version="1.3" }
#fastfibonacci= { path= "/home/michi/Dropbox/fastfibonacci" }


# crossbeam = "0.8"
# flume = "0.10"

[dev-dependencies]
#hashbrown="0.14"
ahash="0.8"
md5 = "0.7.0"
criterion = "0.5"
insta = { version = "1.39.0", features = ["yaml"] }
ndarray="0.15.6"
# pretty_assertions = "1"
rand = "0.8"

[[bench]]
name = "my_benchmark"
harness = false
path = "benches/my_benchmark.rs"
